# kitt_platform

./: .gitignore  .travis.yml  README.md
balor/: README.md  platformio.ini
balor/lib/balor/: CMakeLists.txt  library.json
balor/lib/balor/src/: CMakeLists.txt  balor.cpp  balor.h
balor/lib/balor/test/: CMakeLists.txt  test_balor.cpp
balor/src/: main.cpp
diffdrive/: CMakeLists.txt  library.json
diffdrive/src/: CMakeLists.txt  diffdrive.cpp  diffdrive.h
diffdrive/test/: CMakeLists.txt  test_diffdrive.cpp
